--- a/adapt_cluster_provisioning/roles/galaxy-config/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy-config/tasks/main.yml
@@ -16,9 +16,17 @@
         dest={{ galaxy_path }}/config/tool_conf.xml
         owner=galaxy
         group=galaxy
-- name: Upload shed_tool_conf.xml
-  copy: src=shed_tool_conf.xml
+- name: Upload shed_tool_conf.xml if it doesnt exist already so we dont wipe out tools
+  copy: src=shed_tool_conf.xml force=no
         dest={{ galaxy_path }}/config/shed_tool_conf.xml
+        owner=galaxy
+        group=galaxy
+- name: Make sure shed_tool has correct location to tools 
+  lineinfile: dest={{ galaxy_path }}/config/shed_tool_conf.xml regexp='^\<toolbox'
+              line='<toolbox tool_path="shed_tools">'
+- name: Upload tool_sheds_conf.xml if it doesnt exist
+  copy: src=tool_sheds_conf.xml force=no
+        dest={{ galaxy_path }}/config/tool_sheds_conf.xml
         owner=galaxy
         group=galaxy
 #- name: Upload migrated_tools_conf.xml
@@ -31,11 +39,6 @@
         dest={{ galaxy_path }}/config/datatypes_conf.xml
         owner=galaxy
         group=galaxy
-#- name: Upload tool_sheds_conf.xml
-#  copy: src=tool_sheds_conf.xml
-#        dest={{ galaxy_path }}/config/tool_sheds_conf.xml
-#        owner=galaxy
-#        group=galaxy
 #- name: Upload tool_data_table_conf.xml
 #  copy: src=tool_data_table_conf.xml
 #        dest={{ galaxy_path }}/config/tool_data_table_conf.xml
