--- a/adapt_cluster_provisioning/roles/postgres/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres/vars/main.yml
@@ -3,7 +3,7 @@
 postgres_packages:
   - postgresql
   - postgresql-contrib
-  - postgresql-server-dev-{{ postgres_version }}
+  - postgresql-server-dev-all
   - libpq-dev 
   - python-dev
   - python-pip
