--- a/adapt_cluster_provisioning/slurm_update_playbook.yml
+++ b/adapt_cluster_provisioning/slurm_update_playbook.yml
@@ -2,21 +2,22 @@
 # Playbook to update a galaxy distribution
 
 - hosts: 
-  - master
+  - webserver
   sudo: True
   tasks:
   - name: Shutdown SLURM and galaxy on master
     service: name={{ item }} state=stopped
     with_items:
     - galaxy
-    - slurm-llnl
+    - slurmctld
 
 - hosts: 
   - workers 
   sudo: True
   tasks:
-  - name: Dummy task to get host info
-    debug: msg="Connected to worker"
+  - name: Shutdown SLURM 
+    service: name=slurmd state=stopped
+
 
 - hosts:
   - master
@@ -24,3 +25,21 @@
   sudo: True
   roles:
   - slurm
+
+
+- hosts: 
+  - webserver
+  sudo: True
+  tasks:
+  - name: Shutdown SLURM and galaxy on master
+    service: name={{ item }} state=started
+    with_items:
+    - galaxy
+    - slurmctld
+
+- hosts: 
+  - workers 
+  sudo: True
+  tasks:
+  - name: Shutdown SLURM 
+    service: name=slurmd state=started
