--- a/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
@@ -11,5 +11,6 @@
   local_action: wait_for host={{ ansible_ssh_host }}
                 port={{ ansible_ssh_port }}
                 state=started
-                delay=2
+                delay=20
+                timeout=40
   become: false
