Some changes to transition to single-node infra

--- a/adapt_cluster_provisioning/roles/slurm/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/slurm/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 # Setting up slurm-llnl
+# FIXME turning into a single node only 
 
 - name: Set hostnames explicitly
   template: src=hostname.j2 dest=/etc/hostname
