Removed now obsolete core module and do tool/data path in galaxy init

--- a/adapt_cluster_provisioning/roles/galaxy-init/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy-init/tasks/main.yml
@@ -8,3 +8,8 @@
   command: ./create_db.sh chdir={{ galaxy_path }}
   become_user: galaxy
 
+- name: Create data/tool paths
+  file: path={{ item }} state=directory owner=galaxy group=galaxy
+  with_items:
+  - "{{ tool_path }}"
+  - "{{ data_path }}"
