--- a/adapt_cluster_provisioning/single_node_provision.yml
+++ b/adapt_cluster_provisioning/single_node_provision.yml
@@ -1,13 +1,11 @@
 ---
 # Playbook to install proteomics analysis Galaxy on a single powerful node
-# WIth FTP, cloud
 # Ubuntu 16.04 
 # Node should have one user=ubuntu uid=1000, galaxy will be 1001
 
 # Get hostvars for all boxes
 - hosts:
   - webserver
-  - ftpserver
   - dbserver
   user: ubuntu
   sudo: true
@@ -16,15 +14,13 @@
     debug: msg="Connected to box"
 
 
+# Update apt get
 - hosts:
   - webserver
   user: ubuntu
   sudo: true
   roles:
   - update
-  tasks:
-  - name: Prepare data path
-    file: path={{ galaxy_path }} state=directory owner=galaxy group=galaxy
 
 
 # Keep as is, even though we dont have to connect over network
@@ -36,14 +32,6 @@
   - credentials/dbpass.yml
   roles:
   - postgres
-
-- hosts: ftpserver
-  user: ubuntu
-  sudo: true
-  vars_files:
-  - credentials/dbpass.yml
-  roles:
-  - proftpd 
 
 
 # Install webserver
@@ -57,22 +45,6 @@
   - slurm
   - galaxy
   - nginx 
-
-
-# Single task to set privileges on postgres table has to be done after
-# tables are initialized, which must be done after DBserver is installed
-- hosts: dbserver
-  user: ubuntu
-  sudo: true
-  tasks:
-  - name: Set postgres privileges for galaxy ftp user
-    postgresql_privs: database=galaxy_adapt
-                      state=present
-                      privs=SELECT
-                      type=table
-                      objs=galaxy_user
-                      roles=galaxyftp
-    sudo_user: postgres
 
 
 # Reboot single node system
