--- a/adapt_cluster_provisioning/single_node_provision.yml
+++ b/adapt_cluster_provisioning/single_node_provision.yml
@@ -2,6 +2,8 @@
 # Playbook to install proteomics analysis Galaxy on a single powerful node
 # Ubuntu 16.04 
 # Node should have one user=ubuntu uid=1000, galaxy will be 1001
+# Fill in a DB password in credentials
+# Set the name of the ethernet port in the group_vars file single_node
 
 # Get hostvars for all boxes
 - hosts:
