Removed some username stuff

--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Create galaxy user
+  user: name=galaxy state=present
+  
 - name: Install galaxy dependencies
   apt: pkg={{ item }} state=installed
   with_items: "{{ galaxy_packages }}"
