--- a/adapt_cluster_provisioning/single_node_provision.yml
+++ b/adapt_cluster_provisioning/single_node_provision.yml
@@ -1,7 +1,6 @@
 ---
 # Playbook to install proteomics analysis Galaxy on a single powerful node
 # Assumes Ubuntu 16.04 
-# Make sure there is a UID available for galaxy user that matches specified or change it (usually 1001)
 # Copy credentials/example.yml to credentials/credentials.yml and fill in a DB password and admins
 # Set the name of the ethernet port in the group_vars file single_node
 
@@ -9,8 +8,7 @@
 - hosts:
   - webserver
   - dbserver
-  user: ubuntu
-  sudo: true
+  become: true
   tasks:
   - name: Dummy task to get info of boxes
     debug: msg="Connected to box"
@@ -19,8 +17,7 @@
 # Update apt get
 - hosts:
   - webserver
-  user: ubuntu
-  sudo: true
+  become: true
   roles:
   - update
 
@@ -28,8 +25,7 @@
 # Keep as is, even though we dont have to connect over network
 # Maybe add local connection later
 - hosts: dbserver
-  user: ubuntu
-  sudo: true
+  become: true
   vars_files:
   - credentials/credentials.yml
   roles:
@@ -38,8 +34,7 @@
 
 # Install webserver
 - hosts: webserver
-  user: ubuntu
-  sudo: true
+  become: true
   vars_files:
   - credentials/credentials.yml
   roles:
@@ -51,7 +46,6 @@
 # Reboot single node system
 - hosts:
   - webserver
-  sudo: true
-  user: ubuntu
+  become: true
   roles:
   - reboot
