Port name changed on new box

--- a/adapt_cluster_provisioning/roles/galaxy-init/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy-init/tasks/main.yml
@@ -4,8 +4,14 @@
   command: ./scripts/common_startup.sh chdir={{ galaxy_path }}
   become_user: galaxy
 
+# FIXME need to add psycopg2, drmaa in venv
+
 - name: Create galaxy db tables by running script
   command: ./create_db.sh chdir={{ galaxy_path }}
+  become_user: galaxy
+
+- name: Upgrade DB
+  command: sh manage_db.sh upgrade chdir={{ galaxy_path }}
   become_user: galaxy
 
 - name: Create data/tool paths
